to avoid the horizontal scrollbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8791,6 +8791,7 @@ span {
   width: 100%;
   height: 100%;
   display: initial;
+  left: 0;
 }
 
 .home-container,
